      be used to request standardized Pearson residuals.

      \item A start on a Turkish translation, thanks to Murat Alkan.

      \item \code{.libPaths()} calls \code{normalizePath(winslash = "/")}
      on the paths: this helps (usually) to present them in a
      user-friendly form and should detect duplicate paths accessed via
      different symbolic links.
    }
  }

  \subsection{SWEAVE CHANGES}{
    \itemize{
      \item \code{Sweave()} has options to produce PNG and JPEG figures,
      and to use a custom function to open a graphics device (see
      \code{?RweaveLatex}).\cr
      (Based in part on the contribution of \PR{14418}.)

      \item The default for \code{Sweave()} is to produce only PDF
      figures (rather than both EPS and PDF).

      \item Environment variable \env{SWEAVE_OPTIONS} can be used to
      supply defaults for existing or new options to be applied after
      the Sweave driver setup has been run.

      \item The Sweave manual is now included as a vignette in the
      \pkg{utils} package.

      \item \code{Sweave()} handles \code{keep.source=TRUE} much better:
      it could duplicate some lines and omit comments. (Reported by John
      Maindonald and others.)
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Because they use a C99 interface which a C++ compiler is not
      required to support, \code{Rvprintf} and \code{REvprintf} are only
      defined by \file{R_ext/Print.h} in C++ code if the macro
      \code{R_USE_C99_IN_CXX} is defined when it is included.

      \item \code{pythag} duplicated the C99 function \code{hypot}.  It
      is no longer provided, but is used as a substitute for \code{hypot}
      in the very unlikely event that the latter is not available.

      \item \code{R_inspect(obj)} and \code{R_inspect3(obj, deep, pvec)}
      are (hidden) C-level entry points to the internal \code{inspect}
      function and can be used for C-level debugging (e.g., in conjunction